# finance-research-agent

./: .gitignore  README.md  eval.py  main.py  pyproject.toml  run.py
.claude/agents/: docs-writer.md
core/: agent.py  extractor.py  llm.py  types.py
docs/: action_items.md  agent_principles.md  architecture.md  changelog.md  fda-eval-audit.md  fda-eval-results.md  fda-product-spec.md  fda-tech-spec.md  financial_methodology.md  multi-domain-refactor-spec.md  problems.md  project_plan.md  refactor-plan.md  tech-spec.md  test_results.md
domains/: __init__.py  base.py
domains/fda/: __init__.py  concepts.py  domain.py  identifier.py  methodology.py  parser.py  tools.py
domains/fda/benchmark/: questions.jsonl
domains/finance/: __init__.py  domain.py  registry.py  tools.py
evaluation/: FDA evaluation-strategy.md
results/: latest.json  planner_cache.json
src/: agent.py  calculator.py  extractor.py  financial_concepts.py  financial_methodology.py  llm.py  prompts.py  state.py  ticker.py
src/tools/: fmp.py  registry.py  sec_edgar.py
tests/: test_calculator.py  test_earnings_press_release.py  test_extractor.py  test_integration.py  test_replay.py  test_state.py  test_ticker.py
